--- a/templates/index.html
+++ b/templates/index.html
@@ -7,20 +7,21 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="description" content="" />
     <link rel="icon" href="favicon.png">
+    <link href="{{ url_for('static', path='/output.css') }}" rel="stylesheet">
 </head>
 
 <body>
-    <h1>Schengen Showdown</h1>
+    <h1 class="text-4xl font-bold">Schengen Showdown</h1>
     {% if messages %}
-    <h2> Messages</h2>
+    <h2 class="text-2xl font-semibold"> Messages</h2>
     <ul>
         {% for message in messages %}
         <li>{{ message }}</li>
         {% endfor %}
     </ul>
     {% endif %}
-    <h2>Current Board</h2>
-    <h3>Teams</h3>
+    <h2 class="text-2xl font-semibold">Current Board</h2>
+    <h3 class="text-xl font-medium">Teams</h3>
     <ul>
         {% for team, val in board.teams.items() %}
         <li>
